# shotliner-core

./: Cargo.toml  LICENSE
src/: commands.rs  lib.rs  main.rs  multimedia.rs  production.rs  reports.rs  serializables.rs  shotliner_document.rs
