[package]
name = "shotliner-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false

[lib]
name = "shotliner_corelib"
path = "src/lib.rs"



[dependencies]
chrono = "0.4.41"
screenplay-doc-parser-rs = {version = "0.1.5", features = ["mupdf-basic-parsing"]}
uuid = "1.17.0"

[features]

